RESOLVED FIXED228145
REGRESSION (r280077): [GTK] Theme scrollbar css is no longer respected
https://bugs.webkit.org/show_bug.cgi?id=228145
Summary REGRESSION (r280077): [GTK] Theme scrollbar css is no longer respected
Jim Mason
Reported 2021-07-21 07:01:50 PDT
GTK 3.24.23 It seems this change broke scrollbar theming in non-Adwaita themes. Reverting the change restores the functionality. There might be other UI elements similarly affected. You should be able to reproduce with any theme, but for reference, I am using this one: https://github.com/RocketMan/Solaris-11
Attachments
Screenshot: scrollbar after r280077 (13.79 KB, image/png)
2021-07-21 07:06 PDT, Jim Mason
no flags
Screenshot: Expected scrollbar with change reverted (13.33 KB, image/png)
2021-07-21 07:07 PDT, Jim Mason
no flags
Patch (1.58 KB, patch)
2021-07-21 07:12 PDT, Alice Mikhaylenko
no flags
Jim Mason
Comment 1 2021-07-21 07:06:14 PDT
Created attachment 433931 [details] Screenshot: scrollbar after r280077
Jim Mason
Comment 2 2021-07-21 07:07:06 PDT
Created attachment 433932 [details] Screenshot: Expected scrollbar with change reverted
Alice Mikhaylenko
Comment 3 2021-07-21 07:12:59 PDT
Alice Mikhaylenko
Comment 4 2021-07-21 07:14:13 PDT
Note that as soon as we migrate to GTK4 the theme won't be used anyway - there's no way to foreign draw scrollbars. In fact, for 41 we'll likely default to custom drawn scrollbars at least for Adwaita, so that we can use dark scrollbars when possible - another thing not possible with themes. For now though it was just a typo.
Jim Mason
Comment 5 2021-07-21 07:27:41 PDT
(In reply to Alexander Mikhaylenko from comment #3) > Created attachment 433933 [details] > Patch This has to be the fastest fix ever. Thank you! I am building now to validate.
Jim Mason
Comment 6 2021-07-21 07:51:45 PDT
Confirmed, the patch resolves the issue for me. Thanks again.
EWS
Comment 7 2021-07-21 08:32:38 PDT
Committed r280140 (239841@main): <https://commits.webkit.org/239841@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433933 [details].
Note You need to log in before you can comment on or make changes to this bug.