[GTK] Theme scrollbar css is no longer respected https://bugs.webkit.org/show_bug.cgi?id=228145

Patch by Alexander Mikhaylenko <alexm@gnome.org> on 2021-07-21
Reviewed by Michael Catanzaro.

Fix a fontName -> themeName typo.

* WebProcess/gtk/GtkSettingsManagerProxy.cpp:
(WebKit::GtkSettingsManagerProxy::applySettings):

Canonical link: https://commits.webkit.org/239841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280140 268f45cc-cd09-0410-ab3c-d52691b4dbfc